--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@asmadsen/react-native-unity-view",
+  "name": "@yiheyang/react-native-unity-view",
   "title": "React Native Unity View",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "Embed Unity Player inside a React Native app",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/asmadsen/react-native-unity-view.git",
-    "baseUrl": "https://github.com/asmadsen/react-native-unity-view"
+    "url": "git+https://github.com/yiheyang/react-native-unity-view.git",
+    "baseUrl": "https://github.com/yiheyang/react-native-unity-view"
   },
   "keywords": [
     "react-native"
   ],
   "author": {
-    "name": "Andreas Storesund Madsen",
-    "email": "andreas@asmadsen.no"
+    "name": "Heron Yee",
+    "email": "yiheyang97@gmail.com"
   },
   "license": "MIT",
   "licenseFilename": "LICENSE",
